[package]
name = "egui-antd"
version = "0.1.0"
edition = "2024"

[lints.clippy]
mod_module_files = "deny"

[dependencies]
egui = "0.34.1"
egui_extras = { version = "0.34.1", features = ["svg", "image"] }
image = "0.25.10"
arboard = "3.6.1"
egui-phosphor = "0.12.0"
eframe = "0.34.1"
bytemuck = "1.21.0"

[dev-dependencies]
eframe = "0.34.1"
env_logger = "0.11.10"
log = "0.4.29"
